--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Redux App</title>
+    <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
+                
+    <title>Sanath's Tesla Clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
